add preview rices
